[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "act-tester"
version = "0.4.0"
description = "Automated API contract testing tool"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pyyaml",
    "click",
    "jsonschema",
]

[project.scripts]
act = "api_contract_tester.cli:main"

[tool.setuptools.package-dir]
"api_contract_tester" = "src/api_contract_tester"

[tool.setuptools.packages.find]
where = ["src"]